Added chapter froma  new tcc plan and started writing about the setup

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -138,11 +138,16 @@ front-end in the system.\\
 
 \pagenumbering{arabic}
 
+\part{Introduction}
 \input{chapters/cap_introducao}
-\input{chapters/cap_fmcomms2}
-%\input{cap_interferencePrec}
-%\input{cap_power}
-%\input{cap_conclusoes}
+\part{Literature Review}
+\input{chapters/cap_synchronization}
+\part{Implementation}
+\input{chapters/cap_setup}
+\part{Final Results}
+\input{chapters/cap_results}
+\part{Conclusion and Future Work}
+\input{chapters/cap_conclusions}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%`
 %   Referencias bibliograficas   %
@@ -166,9 +171,9 @@ front-end in the system.\\
 %%%%%%%%%%%%%%%%%%%%%
 
 \appendix
-%\input{apend_ortogonalidade}
-%\input{apend_isi_ici_gaussiana}
-%\input{append_cond_matriz_prec}
+\input{appendix/append_pll}
+\input{appendix/append_fpga_flow}
+\input{appendix/append_ad9361_driver}
 
 %%%%%%%%%%%%%%%%%%%%%
 %   Página em branco    %
