--- a/references.bib
+++ b/references.bib
@@ -2,12 +2,10 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Igor Freire at 2013-08-12 12:09:30 -0300 
+%% Created by Gabriel Peixoto de Carvalho
 
 
-%% Saved with string encoding Unicode (UTF-8) 
-
-
+%%articles%%-------------------------------------------------------------------
 
 @article{cendrillon2007,
 	Author = {Raphael Cendrillon and George Ginis and Etienne Van den Bogaert and Marc Moonen},
@@ -20,36 +18,53 @@
 	Volume = {55},
 	Year = {2007}}
 
-@article{campelloisit1998,
-	Author = {Jorge Campello},
-	Date-Added = {2013-08-06 18:51:54 +0000},
-	Date-Modified = {2013-08-12 13:58:39 +0000},
-	Journal = {{IEEE} International Symposium on Information Theory},
-	Month = {aug.},
-	Pages = {193},
-	Title = {Optimal Discrete Bit Loading for Multicarrier Modulation Systems},
-	Year = {1998}}
+	@unpublished{ee379a,
+	Author = {John Cioffi},
+	Date-Added = {2013-06-22 23:16:42 +0000},
+	Date-Modified = {2013-06-22 23:21:03 +0000},
+	Institution = {Stanford University},
+	Title = {Lecture Notes for Digital Communication: Signal Processing},
+	Year = {Winter Quarter 2007-2008}}
 
-@misc{itutq4046,
-	Author = {Alcatel-Lucent},
-	Date-Added = {2013-08-03 13:09:23 +0000},
-	Date-Modified = {2013-08-12 14:58:00 +0000},
-	Howpublished = {Contribution {ITU}-{T} 2013-01-{Q}4-046, Geneva, Switzerland},
-	Month = {jan.},
-	Title = {G.fast: {C}omparison of linear and non-linear precoding},
-	Year = {2013}}
+%%-----------------------------------------------------------------------------
 
-@article{capacityApproachingCodes,
-	Author = {Daniel Costello and Shu Lin and Thomas Richardson and William Ryan and Ruediger Urbanke and Richard Wesel},
-	Date-Added = {2013-08-02 19:09:54 +0000},
-	Date-Modified = {2013-08-12 13:58:11 +0000},
-	Journal = {{IEEE} Journal on Selected Areas in Communications},
-	Month = {aug.},
-	Number = {6},
-	Pages = {825-830},
-	Title = {Capacity Approaching Codes},
-	Volume = {27},
+%%books%%----------------------------------------------------------------------
+
+@book{gray2006,
+	Author = {Robert M. Gray},
+	Date-Added = {2013-07-11 19:40:55 +0000},
+	Date-Modified = {2013-07-11 19:42:22 +0000},
+	Publisher = {Now Publishers Inc},
+	Title = {Toeplitz and Circulant Matrices: A review},
+	Year = {2006}}
+
+	@inbook{fundamentalsDSLch7,
+	Author = {Krista S. Jacobsen},
+	Chapter = {7},
+	Date-Added = {2013-06-27 02:38:00 +0000},
+	Date-Modified = {2013-08-12 14:57:08 +0000},
+	Editor = {Philip Golden and Herve Dedieu and Krista S. Jacobsen},
+	Publisher = {Auerbach Publications},
+	Title = {Fundamentals of {DSL} Technology},
+	Year = {2006}}
+
+%%-----------------------------------------------------------------------------
+
+%%thesis%%---------------------------------------------------------------------
+
+@phdthesis{malkin2009,
+	Address = {Stanford, {USA}},
+	Author = {Moshe H. Malkin},
+	Date-Added = {2013-07-03 01:31:45 +0000},
+	Date-Modified = {2013-08-12 15:09:30 +0000},
+	Month = {jun.},
+	School = {Stanford University},
+	Title = {Optimized Transmitter-Based Signal Processing for Multicarrier Systems},
 	Year = {2009}}
+
+%%-----------------------------------------------------------------------------
+
+%%techreport%%-----------------------------------------------------------------
 
 @techreport{tno_gfast,
 	Address = {The Netherlands},
@@ -62,334 +77,50 @@
 	Type = {White paper on {DSL}},
 	Year = {2011}}
 
-@book{gray2006,
-	Author = {Robert M. Gray},
-	Date-Added = {2013-07-11 19:40:55 +0000},
-	Date-Modified = {2013-07-11 19:42:22 +0000},
-	Publisher = {Now Publishers Inc},
-	Title = {Toeplitz and Circulant Matrices: A review},
-	Year = {2006}}
+%%-----------------------------------------------------------------------------
 
-@article{malkin2007,
-	Author = {Moshe Malkin and Chan-Soo Hwang and John M. Cioffi},
-	Date-Added = {2013-07-11 17:45:40 +0000},
-	Date-Modified = {2013-08-12 13:59:01 +0000},
-	Journal = {{IEEE} Global Telecommunications Conference},
-	Month = {nov.},
-	Pages = {2889-2893},
-	Title = {Reducing Insufficient-Cyclic-Prefix Distortion Using Tone Reservation},
-	Year = {2007}}
+%%datasheet%%------------------------------------------------------------------
 
-@article{huang2009,
-	Author = {Yin-Ray Huang and Carrson C. Fung and Kaiman Thomas Wong},
-	Date-Added = {2013-07-11 16:20:24 +0000},
-	Date-Modified = {2013-08-12 13:58:32 +0000},
-	Journal = {{IEEE} Signal Processing Letters},
-	Month = {jul.},
-	Number = {11},
-	Pages = {929-932},
-	Title = {Interference Suppression for {OFDM} Systems With Insufficient Guard Interval Using Null Subcarriers},
-	Volume = {16},
-	Year = {2009}}
+@manual{nxp:tja1043,
+    organization  = "NXP Semiconductors",
+    title         = "High-speed CAN transceiver",
+    number        = "TJA1043",
+    year          =  2013,
+    month         =  4,    
+    note          = "Rev. 3"
+}
 
-@article{maes2012,
-	Author = {Jochen Maes and Mamoun Guenach and Koen Vanbleu and Michael Timmers},
-	Date-Added = {2013-07-11 15:45:14 +0000},
-	Date-Modified = {2013-08-12 13:58:57 +0000},
-	Journal = {{IEEE} International Conference on Communications},
-	Month = {jun.},
-	Pages = {3149 - 3153},
-	Title = {Pushing the limits of copper: {P}aving the road to {FTTH}},
-	Year = {2012}}
+@manual{infineon:TLE4473GV55-2,
+    organization  = "Infineon Technologies AG",
+    title         = "Dual Low Dropout Voltage Regulator",
+    number        = "TLE 4473 GV55-2",
+    year          =  2008,
+    month         =  10,
+    note          = "Rev. 1.2"
+}
 
-@article{Cheong98,
-	Author = {Kok-Wui Cheong and John M. Cioffi},
-	Date-Added = {2013-07-10 16:17:51 +0000},
-	Date-Modified = {2013-08-12 13:58:51 +0000},
-	Journal = {{IEEE} International Conference on Communications},
-	Month = {jun.},
-	Pages = {339-343},
-	Title = {Precoder for {DMT} with insufficient cyclic prefix},
-	Volume = {1},
-	Year = {1998}}
+@manual{freescale:33879A,
+    organization  = "Freescale Semiconductor",
+    title         = "Configurable Octal Serial Switch
+                    with Open Load Detect Current Disable",
+    year          =  2012,
+    month         =  6,
+    number        = "MC33879",
+    note          = "Rev. 10.0"
+}
 
-@article{Trautmann2002,
-	Author = {Trautmann, S. and Fliege, N.J.},
-	Date-Added = {2013-07-10 16:17:22 +0000},
-	Date-Modified = {2013-08-12 13:58:43 +0000},
-	Journal = {{IEEE} Journal on Selected Areas in Communications},
-	Month = {aug.},
-	Number = {5},
-	Pages = {987-996},
-	Title = {Perfect Equalization for {DMT} Systems Without Guard Interval},
-	Volume = {20},
-	Year = {2002}}
+%%-----------------------------------------------------------------------------
 
-@article{lindqvist2011,
-	Author = {Fredrik Lindqvist and Antoni Fertner},
-	Date-Added = {2013-07-10 16:09:47 +0000},
-	Date-Modified = {2013-08-12 13:58:26 +0000},
-	Journal = {{IEEE} Signal Processing Letters},
-	Month = {oct.},
-	Number = {12},
-	Pages = {713-716},
-	Title = {Frequency Domain Echo Canceller for {DMT}-Based Systems},
-	Volume = {18},
-	Year = {2011}}
+%%misc%%-----------------------------------------------------------------------
+@misc{CD4007,
+  	author={Texas Instruments},
+  	title={CD4007UB},
+  	howpublished = "site usar package url",
+  	note={original document from Harris Semiconductor},
+  	publisher={Texas Instruments},
+  	year={2012}
+}
+%%-----------------------------------------------------------------------------
 
-@article{chanshort2001,
-	Author = {G{\"u}ner Arslan and Brian L. Evans and Sayfe Kiaei},
-	Date-Added = {2013-07-10 16:05:54 +0000},
-	Date-Modified = {2013-08-12 13:58:20 +0000},
-	Journal = {{IEEE} Transactions on Signal Processing},
-	Month = {aug.},
-	Number = {12},
-	Pages = {3123-3135},
-	Title = {Equalization for Discrete Multitone Transceivers to Maximize Bit Rate},
-	Volume = {49},
-	Year = {2001}}
 
-@article{channelshort2003,
-	Author = {Andre Tkacenko and P. P. Vaidyanathan},
-	Date-Added = {2013-07-10 15:59:07 +0000},
-	Date-Modified = {2013-08-12 13:57:59 +0000},
-	Journal = {{IEEE} Transactions on Communications},
-	Month = {jul.},
-	Number = {7},
-	Pages = {1069-1072},
-	Title = {A Low-Complexity Eigenfilter Design Method for Channel Shortening Equalizers for {DMT} Systems},
-	Volume = {51},
-	Year = {2003}}
 
-@article{stuber1998,
-	Author = {Dukhyun Kim and Gordon L. St{\"u}ber},
-	Date-Added = {2013-07-10 15:10:37 +0000},
-	Date-Modified = {2013-08-12 13:59:05 +0000},
-	Journal = {{IEEE} Journal on Selected Areas in Communications},
-	Month = {oct.},
-	Number = {8},
-	Pages = {1590-1599},
-	Title = {Residual ISI Cancellation for {OFDM} with Applications to {HDTV} Broadcasting},
-	Volume = {16},
-	Year = {1998}}
-
-@article{Cendrillon07,
-	Author = {Raphael Cendrillon and George Ginis and Etienne Van den Bogaert and Marc Moonen},
-	Date-Added = {2013-07-04 14:30:51 +0000},
-	Date-Modified = {2013-08-12 13:58:08 +0000},
-	Journal = {{IEEE} Transactions on Communications},
-	Month = {may},
-	Number = {5},
-	Pages = {860-863},
-	Title = {A Near-Optimal Linear Crosstalk Precoder for Downstream {VDSL}},
-	Volume = {55},
-	Year = {2007}}
-
-@article{Malkin08,
-	Author = {Moshe Malkin and Chan-Soo Hwang and John M. Cioffi},
-	Date-Added = {2013-07-04 14:17:27 +0000},
-	Date-Modified = {2013-08-12 14:02:43 +0000},
-	Journal = {{IEEE} Vehicular Technology Conference.},
-	Month = {may},
-	Pages = {1142-1146},
-	Title = {Transmitter Precoding for Insufficient-Cyclic-Prefix Distortion in Multicarrier Systems},
-	Year = {2008}}
-
-@article{Park04,
-	Author = {Cheol-Jin Park and Gi-Hong Im},
-	Date-Added = {2013-07-04 14:17:18 +0000},
-	Date-Modified = {2013-08-12 13:58:16 +0000},
-	Journal = {{IEEE} Communications Letters},
-	Month = {sept.},
-	Number = {9},
-	Pages = {576-578},
-	Title = {Efficient {DMT}/{OFDM} Transmission with Insufficient Cyclic Prefix},
-	Volume = {8},
-	Year = {2004}}
-
-@phdthesis{malkin2009,
-	Address = {Stanford, {USA}},
-	Author = {Moshe H. Malkin},
-	Date-Added = {2013-07-03 01:31:45 +0000},
-	Date-Modified = {2013-08-12 15:09:30 +0000},
-	Month = {jun.},
-	School = {Stanford University},
-	Title = {Optimized Transmitter-Based Signal Processing for Multicarrier Systems},
-	Year = {2009}}
-
-@book{oppenheim1998,
-	Author = {Alan V. Oppenheim and Ronald W. Schafer and John R. Buck},
-	Date-Added = {2013-06-27 02:49:09 +0000},
-	Date-Modified = {2013-08-12 14:05:25 +0000},
-	Edition = {2nd},
-	Publisher = {Prentice Hall},
-	Title = {Discrete-Time Signal Processing},
-	Year = {1998}}
-
-@inbook{fundamentalsDSLch7,
-	Author = {Krista S. Jacobsen},
-	Chapter = {7},
-	Date-Added = {2013-06-27 02:38:00 +0000},
-	Date-Modified = {2013-08-12 14:57:08 +0000},
-	Editor = {Philip Golden and Herve Dedieu and Krista S. Jacobsen},
-	Publisher = {Auerbach Publications},
-	Title = {Fundamentals of {DSL} Technology},
-	Year = {2006}}
-
-@article{perodling2002,
-	Author = {Werner Henkel and Georg Taub{\"o}ck and Per {\"O}dling and Per Ola B{\"o}rjesson and Niklas Petersson and Albin Johansson},
-	Date-Added = {2013-06-26 18:07:54 +0000},
-	Date-Modified = {2013-08-12 14:01:15 +0000},
-	Journal = {{IEEE} International Zurich Seminar on Broadband Communications Access - Transmission - Networking},
-	Month = {feb.},
-	Title = {The Cyclic Prefix of {OFDM}/{DMT} - An Analysis},
-	Year = {2002}}
-
-@article{shannon1961,
-	Author = {Claude Elwood Shannon},
-	Date-Added = {2013-06-24 19:38:38 +0000},
-	Date-Modified = {2013-08-12 14:04:18 +0000},
-	Journal = {Proc. Fourth Berkeley Symposium on Probability and Statistics},
-	Month = {jun./jul.},
-	Pages = {611-644},
-	Title = {Two-way Communication Channels},
-	Volume = {1},
-	Year = {1960}}
-
-@unpublished{ee379c,
-	Author = {John Cioffi},
-	Date-Added = {2013-06-24 19:30:07 +0000},
-	Date-Modified = {2013-06-24 19:31:03 +0000},
-	Institution = {Stanford University},
-	Title = {Lecture Notes for Advanced Digital Communication},
-	Year = {Spring Quarter 2007-2008}}
-
-@inbook{fundamentalsDSLch11,
-	Author = {Ragnar Hlynur Jonsson},
-	Chapter = {11},
-	Date-Added = {2013-06-24 16:35:44 +0000},
-	Date-Modified = {2013-08-12 14:57:14 +0000},
-	Editor = {Philip Golden and Herve Dedieu and Krista S. Jacobsen},
-	Publisher = {Auerbach Publications},
-	Title = {Fundamentals of {DSL} Technology},
-	Year = {2006}}
-
-@unpublished{ee379a,
-	Author = {John Cioffi},
-	Date-Added = {2013-06-22 23:16:42 +0000},
-	Date-Modified = {2013-06-22 23:21:03 +0000},
-	Institution = {Stanford University},
-	Title = {Lecture Notes for Digital Communication: Signal Processing},
-	Year = {Winter Quarter 2007-2008}}
-
-@book{proakisdsp,
-	Author = {Vinay K. Ingle and John G. Proakis},
-	Date-Added = {2013-06-20 21:32:00 +0000},
-	Date-Modified = {2013-08-12 14:05:18 +0000},
-	Edition = {3rd},
-	Publisher = {Cengage Learning},
-	Title = {Digital Signal Processing using MATLAB},
-	Year = {2011}}
-
-@phdthesis{cendrillonthesis,
-	Address = {Heverlee, Belgium},
-	Author = {Raphael Cendrillon},
-	Date-Added = {2013-06-20 01:59:47 +0000},
-	Date-Modified = {2013-08-12 15:06:31 +0000},
-	Month = {dec.},
-	School = {Katholieke Universiteit Leuven},
-	Title = {Multi-user signal and spectra co-ordination for digital subscriber lines},
-	Year = {2004}}
-
-@article{shannon1948,
-	Author = {Claude Elwood Shannon},
-	Date-Added = {2013-06-15 01:24:15 +0000},
-	Date-Modified = {2013-08-12 13:58:36 +0000},
-	Journal = {Bell Syst. Tech. J.},
-	Month = {jul.},
-	Pages = {379-423},
-	Title = {Mathematical Theory of Communications},
-	Volume = {27},
-	Year = {1948}}
-
-@article{campello1999,
-	Author = {Jorge Campello},
-	Date-Added = {2013-06-09 21:16:37 +0000},
-	Date-Modified = {2013-08-12 13:58:47 +0000},
-	Journal = {IEEE International conference on Communications},
-	Month = {jun.},
-	Pages = {801-805},
-	Title = {Practical Bit Loading for DMT},
-	Volume = {2},
-	Year = {1999}}
-
-@inbook{cioffibook1999,
-	Author = {Thomas Starr and John M. Cioffi and Peter J. Silverman},
-	Date-Added = {2013-06-08 23:36:17 +0000},
-	Date-Modified = {2013-06-09 21:32:04 +0000},
-	Publisher = {Prentice Hall},
-	Title = {Understanding Digital Subscriber Line Technology},
-	Year = {1999}}
-
-@inbook{cioffibook2003,
-	Author = {Thomas Starr and Massimo Sorbara and John M. Cioffi and Peter J. Silverman},
-	Date-Added = {2013-06-08 23:33:01 +0000},
-	Date-Modified = {2013-08-12 14:57:02 +0000},
-	Edition = {1st},
-	Publisher = {Prentice Hall},
-	Title = {{DSL} Advances},
-	Year = {2003}}
-
-@inbook{cho_ofdm,
-	Author = {Yong Soo Cho and Jaekwon Kim and Won Young Yang and Chung G. Kang},
-	Chapter = {1},
-	Date-Added = {2013-06-03 23:41:47 +0000},
-	Date-Modified = {2013-08-12 14:57:33 +0000},
-	Edition = {1st},
-	Publisher = {Wiley-{IEEE} Press},
-	Title = {{MIMO}-{OFDM} wireless communications with {MATLAB}\textsuperscript{\textregistered}},
-	Year = {2010}}
-
-@inbook{lathi2009,
-	Author = {B. P. Lathi and Zhi Ding},
-	Date-Added = {2013-05-31 23:12:51 +0000},
-	Date-Modified = {2013-08-12 14:53:43 +0000},
-	Edition = {4th},
-	Publisher = {Oxford University Press},
-	Title = {Modern Digital and Analog Communication Systems},
-	Year = {2009}}
-
-@book{proakis_dcomm,
-	Author = {John G. Proakis and Masoud Salehi},
-	Date-Added = {2013-05-31 23:08:36 +0000},
-	Date-Modified = {2013-08-12 14:04:52 +0000},
-	Edition = {5th},
-	Publisher = {McGraw-Hill Higher Education},
-	Title = {Digital Communications},
-	Year = {2008}}
-
-@article{650240,
-	Author = {Schmidl, T.M. and Cox, D.C.},
-	Date-Added = {2012-08-08 15:09:44 +0000},
-	Date-Modified = {2013-08-12 13:57:42 +0000},
-	Doi = {10.1109/26.650240},
-	Issn = {0090-6778},
-	Journal = {{IEEE} Transactions on Communications},
-	Keywords = {Cramer-Rao lower bound;OFDM system;PSK;QAM;SNR;averaging;burst operation;carrier frequency offsets;continuous transmission;frequency offset estimate;frequency synchronization;},
-	Month = {dec.},
-	Number = {12},
-	Pages = {1613 -1621},
-	Title = {Robust frequency and timing synchronization for {OFDM}},
-	Volume = {45},
-	Year = {1997},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1109/26.650240}}
-
-@inbook{dspambardar,
-	Author = {Ashok Ambardar},
-	Date-Modified = {2013-08-12 14:05:40 +0000},
-	Edition = {1st},
-	Key = {dspambardar},
-	Pages = {374},
-	Publisher = {Thomson},
-	Title = {Digital Signal Processing: A Modern Introduction},
-	Year = 2007}
