added more chapters to implementation part and wrote more about ad9361/fmcomms2

--- a/gabrielPeixoto_tcc.tex
+++ b/gabrielPeixoto_tcc.tex
@@ -143,6 +143,8 @@ front-end in the system.\\
 \part{Literature Review}
 \input{chapters/cap_synchronization}
 \part{Implementation}
+\input{chapters/cap_fmcomms2}
+\input{chapters/cap_fpga}
 \input{chapters/cap_setup}
 \part{Final Results}
 \input{chapters/cap_results}
