--- a/references.bib
+++ b/references.bib
@@ -1,126 +1,150 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% Created by Gabriel Peixoto de Carvalho 
+
+%%articles%%------------------------------------------------------------------- 
+
+@article{cendrillon2007, 	
+Author = {Raphael Cendrillon and George Ginis and Etienne Van den Bogaert and Marc Moonen}, 	
+Journal = {{IEEE} Transactions on Communications}, 	
+Month = {may}, 	
+Pages = {860-863}, 	
+Title = {A Near-Optimal Linear Crosstalk Precoder for Downstream {VDSL}}, 	
+Volume = {55}, 	
+Year = {2007}} 
+	
+@unpublished{ee379a, 	
+Author = {John Cioffi}, 	
+Date-Added = {2013-06-22 23:16:42 +0000}, 	
+Date-Modified = {2013-06-22 23:21:03 +0000}, 	
+Institution = {Stanford University}, 	
+Title = {Lecture Notes for Digital Communication: Signal Processing}, 	
+Year = {Winter Quarter 2007-2008}} 
+
+%%----------------------------------------------------------------------------- 
 
 
-%% Created by Gabriel Peixoto de Carvalho
+%%books%%---------------------------------------------------------------------- 
+
+@book{akfapespa, 	
+Author = {Aldebaro Klautau},	
+Publisher = {Now Publishers Inc}, 	
+Title = {Digital COmmunications adn Signal Processing : An Introduction Using Octave or Matlab}, 	
+Year = {2013}} 
+
+@book{gardner, 	
+Author = {Floyd M. Gardner},	
+Publisher = {New York: Wiley}, 	
+Title = {Phaselock Techniques}, 	
+Year = {1979}} 	
+
+@inbook{fundamentalsDSLch7, 	
+Author = {Krista S. Jacobsen}, 	
+Chapter = {7}, 
+Date-Added = {2013-06-27 02:38:00 +0000}, 	
+Date-Modified = {2013-08-12 14:57:08 +0000}, 	
+Editor = {Philip Golden and Herve Dedieu and Krista S. Jacobsen}, 	
+Publisher = {Auerbach Publications}, 	
+Title = {Fundamentals of {DSL} Technology}, 	
+Year = {2006}} 
+
+%%----------------------------------------------------------------------------- 
+
+%%thesis%%--------------------------------------------------------------------- 
+
+@phdthesis{malkin2009, 	
+Address = {Stanford, {USA}}, 
+	Author = {Moshe H. Malkin}, 	
+Date-Added = {2013-07-03 01:31:45 +0000}, 	
+Date-Modified = {2013-08-12 15:09:30 +0000}, 	
+Month = {jun.}, 	
+School = {Stanford University}, 	
+Title = {Optimized Transmitter-Based Signal Processing for Multicarrier Systems}, 	Year = {2009}}
+
+%%----------------------------------------------------------------------------- 
 
 
-%%articles%%-------------------------------------------------------------------
-
-@article{cendrillon2007,
-	Author = {Raphael Cendrillon and George Ginis and Etienne Van den Bogaert and Marc Moonen},
-	Date-Added = {2013-08-10 03:39:10 +0000},
-	Date-Modified = {2013-08-12 13:58:03 +0000},
-	Journal = {{IEEE} Transactions on Communications},
-	Month = {may},
-	Pages = {860-863},
-	Title = {A Near-Optimal Linear Crosstalk Precoder for Downstream {VDSL}},
-	Volume = {55},
-	Year = {2007}}
-
-	@unpublished{ee379a,
-	Author = {John Cioffi},
-	Date-Added = {2013-06-22 23:16:42 +0000},
-	Date-Modified = {2013-06-22 23:21:03 +0000},
-	Institution = {Stanford University},
-	Title = {Lecture Notes for Digital Communication: Signal Processing},
-	Year = {Winter Quarter 2007-2008}}
-
-%%-----------------------------------------------------------------------------
-
-%%books%%----------------------------------------------------------------------
-
-@book{gray2006,
-	Author = {Robert M. Gray},
-	Date-Added = {2013-07-11 19:40:55 +0000},
-	Date-Modified = {2013-07-11 19:42:22 +0000},
-	Publisher = {Now Publishers Inc},
-	Title = {Toeplitz and Circulant Matrices: A review},
-	Year = {2006}}
-
-	@inbook{fundamentalsDSLch7,
-	Author = {Krista S. Jacobsen},
-	Chapter = {7},
-	Date-Added = {2013-06-27 02:38:00 +0000},
-	Date-Modified = {2013-08-12 14:57:08 +0000},
-	Editor = {Philip Golden and Herve Dedieu and Krista S. Jacobsen},
-	Publisher = {Auerbach Publications},
-	Title = {Fundamentals of {DSL} Technology},
-	Year = {2006}}
-
-%%-----------------------------------------------------------------------------
-
-%%thesis%%---------------------------------------------------------------------
-
-@phdthesis{malkin2009,
-	Address = {Stanford, {USA}},
-	Author = {Moshe H. Malkin},
-	Date-Added = {2013-07-03 01:31:45 +0000},
-	Date-Modified = {2013-08-12 15:09:30 +0000},
-	Month = {jun.},
-	School = {Stanford University},
-	Title = {Optimized Transmitter-Based Signal Processing for Multicarrier Systems},
-	Year = {2009}}
-
-%%-----------------------------------------------------------------------------
-
-%%techreport%%-----------------------------------------------------------------
+%%techreport%%----------------------------------------------------------------- 
 
 @techreport{tno_gfast,
-	Address = {The Netherlands},
-	Author = {Rob F.M. van den Brink},
-	Date-Added = {2013-07-23 15:42:54 +0000},
-	Date-Modified = {2013-08-12 14:59:00 +0000},
-	Institution = {{TNO}},
-	Month = {apr.},
-	Title = {Enabling 4{GBB} via the last copper drop of a hybrid {F}tt{H} deployment},
-	Type = {White paper on {DSL}},
-	Year = {2011}}
+ 	Address = {The Netherlands},
+ 	Author = {Rob F.M. van den Brink},
+ 	Date-Added = {2013-07-23 15:42:54 +0000},
+ 	Date-Modified = {2013-08-12 14:59:00 +0000},
+ 	Institution = {{TNO}}, 	Month = {apr.},
+Title = {Enabling 4{GBB} via the last copper drop of a hybrid {F}tt{H} deployment}, 	
+Type = {White paper on {DSL}},
+ 	Year = {2011}} 
+
+%%----------------------------------------------------------------------------- 
+
+
+%%datasheet%%------------------------------------------------------------------ 
+
+@manual{ad:ug570, 
+organization = "Analog Devices", 
+title = "AD9361 Reference Manual", 
+number = "UG-570", 
+year = 2015, 
+note = "Rev. A" }
+
+@manual{ad:ad9361, 
+organization = "Analog Devices", 
+title = "RF Agile Transceiver", 
+number = "AD9361", 
+year = 2014, 
+note = "Rev. E" }
+
+@manual{ad:ad9361driver, 
+organization = "Analog Devices", 
+title = "AD9361 Device Driver Customization", 
+number = "", 
+year = 2015,
+month = 7, 
+note = "Rev. 20 jul" }
+
+
+@manual{xilinx:vivado, 
+organization = "Xilinx", 
+title = "Vivado Design Suite User Guide", 
+number = "UG892", 
+year = 2014, 
+month = 4, 
+note = "Rev. 2014.2" } 
+
+@manual{xilinx:vc707, 
+organization = "Xilinx", 
+title = "Getting Started with the Virtex-7 FPGA VC707 Evaluation Kit", 
+number = "UG848", 
+year = 2014, 
+month = 10, 
+note = "v. 1.4.1" } 
+
+@manual{xilinx:axidma, 
+organization = "Xilinx", 
+title = "LogiCORE IP AXI DMA", 
+number = "PG021", 
+year = 2012, 
+month = 7, 
+note = "v. 6.01.a" }
+
+@manual{xilinx:axieth, 
+organization = "Xilinx", 
+title = "AXI Ethernet Subsystem", 
+number = "PG138", 
+year = 2014, 
+month = 10, 
+note = "v. 6.2" }
 
 %%-----------------------------------------------------------------------------
 
-%%datasheet%%------------------------------------------------------------------
 
-@manual{nxp:tja1043,
-    organization  = "NXP Semiconductors",
-    title         = "High-speed CAN transceiver",
-    number        = "TJA1043",
-    year          =  2013,
-    month         =  4,    
-    note          = "Rev. 3"
-}
+%%misc%%----------------------------------------------------------------------- 
 
-@manual{infineon:TLE4473GV55-2,
-    organization  = "Infineon Technologies AG",
-    title         = "Dual Low Dropout Voltage Regulator",
-    number        = "TLE 4473 GV55-2",
-    year          =  2008,
-    month         =  10,
-    note          = "Rev. 1.2"
-}
-
-@manual{freescale:33879A,
-    organization  = "Freescale Semiconductor",
-    title         = "Configurable Octal Serial Switch
-                    with Open Load Detect Current Disable",
-    year          =  2012,
-    month         =  6,
-    number        = "MC33879",
-    note          = "Rev. 10.0"
-}
-
-%%-----------------------------------------------------------------------------
-
-%%misc%%-----------------------------------------------------------------------
 @misc{CD4007,
-  	author={Texas Instruments},
-  	title={CD4007UB},
-  	howpublished = "site usar package url",
-  	note={original document from Harris Semiconductor},
-  	publisher={Texas Instruments},
-  	year={2012}
-}
+ 	author={Texas Instruments}, 	
+title={CD4007UB}, 	
+howpublished = "site usar package url", 	
+note={original document from Harris Semiconductor}, 	
+publisher={Texas Instruments}, 	
+year={2012} } 
+
 %%-----------------------------------------------------------------------------
-
-
-
