add new references

--- a/references.bib
+++ b/references.bib
@@ -46,6 +46,12 @@ Publisher = {Auerbach Publications},
 Title = {Fundamentals of {DSL} Technology}, 	
 Year = {2006}} 
 
+@inbook{warrior, 	
+Author = {Clive Maxfield}, 	
+Chapter = {1,2,3,4},  		
+Publisher = {Newnes}, 	
+Title = {The Design Warrior's Guide to FPGAs: Devices, Tools and Flows}, 	
+Year = {2004}} 
 %%----------------------------------------------------------------------------- 
 
 %%thesis%%--------------------------------------------------------------------- 
