remove babel package and everything goes english

--- a/packages.tex
+++ b/packages.tex
@@ -20,9 +20,9 @@
 \usepackage{float}
 \usepackage{steinmetz}
 \usetikzlibrary{arrows,shapes,shapes.multipart}
-\usepackage[brazil]{babel}
+%\usepackage[brazil]{babel}
 \usepackage[T1]{fontenc}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{enumitem} % To adjust lists
