--- a/references.bib
+++ b/references.bib
@@ -1,74 +1,79 @@
-%% Created by Gabriel Peixoto de Carvalho 
+%% Created by Gabriel Peixoto de Carvalho
 
-%%articles%%------------------------------------------------------------------- 
+%%articles%%-------------------------------------------------------------------
 
-@article{cendrillon2007, 	
-Author = {Raphael Cendrillon and George Ginis and Etienne Van den Bogaert and Marc Moonen}, 	
-Journal = {{IEEE} Transactions on Communications}, 	
-Month = {may}, 	
-Pages = {860-863}, 	
-Title = {A Near-Optimal Linear Crosstalk Precoder for Downstream {VDSL}}, 	
-Volume = {55}, 	
-Year = {2007}} 
-	
-@unpublished{ee379a, 	
-Author = {John Cioffi}, 	
-Date-Added = {2013-06-22 23:16:42 +0000}, 	
-Date-Modified = {2013-06-22 23:21:03 +0000}, 	
-Institution = {Stanford University}, 	
-Title = {Lecture Notes for Digital Communication: Signal Processing}, 	
-Year = {Winter Quarter 2007-2008}} 
-
-%%----------------------------------------------------------------------------- 
+@Article{kelley2009,
+  author =  {Brian Kelley},
+  title =   {Software Defined Radio for Broadband OFDM Protocols},
+  journal = {IEEE International Conference on Systems, Man, and Cybernetics},
+  year =    {2009}
+}
 
 
-%%books%%---------------------------------------------------------------------- 
+@Article{ladimer2009,
+  author =  {Ladimer S. Nagurney},
+  title =   {Software Defined Radio in the Electrical and Computer Engineering Curriculum},
+  journal = {ASEE/IEEE Frontiers in Education Conference},
+  year =    {2009}
+}
 
-@book{akfapespa, 	
-Author = {Aldebaro Klautau},	
-Publisher = {Now Publishers Inc}, 	
-Title = {Digital COmmunications adn Signal Processing : An Introduction Using Octave or Matlab}, 	
-Year = {2013}} 
-
-@book{gardner, 	
-Author = {Floyd M. Gardner},	
-Publisher = {New York: Wiley}, 	
-Title = {Phaselock Techniques}, 	
-Year = {1979}} 	
-
-@inbook{fundamentalsDSLch7, 	
-Author = {Krista S. Jacobsen}, 	
-Chapter = {7}, 
-Date-Added = {2013-06-27 02:38:00 +0000}, 	
-Date-Modified = {2013-08-12 14:57:08 +0000}, 	
-Editor = {Philip Golden and Herve Dedieu and Krista S. Jacobsen}, 	
-Publisher = {Auerbach Publications}, 	
-Title = {Fundamentals of {DSL} Technology}, 	
-Year = {2006}} 
-
-@inbook{warrior, 	
-Author = {Clive Maxfield}, 	
-Chapter = {1,2,3,4},  		
-Publisher = {Newnes}, 	
-Title = {The Design Warrior's Guide to FPGAs: Devices, Tools and Flows}, 	
-Year = {2004}} 
-%%----------------------------------------------------------------------------- 
-
-%%thesis%%--------------------------------------------------------------------- 
-
-@phdthesis{malkin2009, 	
-Address = {Stanford, {USA}}, 
-	Author = {Moshe H. Malkin}, 	
-Date-Added = {2013-07-03 01:31:45 +0000}, 	
-Date-Modified = {2013-08-12 15:09:30 +0000}, 	
-Month = {jun.}, 	
-School = {Stanford University}, 	
-Title = {Optimized Transmitter-Based Signal Processing for Multicarrier Systems}, 	Year = {2009}}
-
-%%----------------------------------------------------------------------------- 
+@Article{alan2008,
+  author =  {Alan C. Tribble},
+  title =   {The Software Defined Radio: Fact and Fiction},
+  journal = {IEEE},
+  year =    {2008}
+}
 
 
-%%techreport%%----------------------------------------------------------------- 
+@Article{dayananda2012,
+  author =  {Dayananda M. S. and Priyanka Jha},
+  title =   {Managing Software Defined Radio through Cloud Computing},
+  journal = {IEEE Intemational Conference on Advanced Communication Control and Computing Technologies},
+  year =    {2012}
+}
+
+%%-----------------------------------------------------------------------------
+
+
+%%books%%----------------------------------------------------------------------
+
+@Book{akbook,
+  title =     {Digital Communications and Signal Processing An Introduction using Octave or Matlab},
+  publisher = {Now Publishers Inc.},
+  year =      {2013},
+  author =    {Aldebaro Klautau}
+}
+
+@Book{gardner1979,
+  title =     {Phaselock Techniques},
+  publisher = {Wiley-Interscience},
+  year =      {1979},
+  author =    {Floyd M. Gardner},
+  edition =   {2nd}
+}
+
+@Book{max2004,
+  title =     {The Design Warrior's Guide to FPGAs: Devices, Tools and Flows},
+  publisher = {Newnes},
+  year =      {2004},
+  author =    {Clive Maxfield}
+}
+
+%%-----------------------------------------------------------------------------
+
+%%thesis%%---------------------------------------------------------------------
+
+@MastersThesis{master:freire,
+  author = {Igor Antonio Auad Freire},
+  title =  {FPGA Implementation and Evaluation of Synchronization Architectures for Ethernet-based Cloud-RAN Fronthaul},
+  school = {Federal University of Para},
+  year =   {2016},
+  month =  feb
+}
+%%-----------------------------------------------------------------------------
+
+
+%%techreport%%-----------------------------------------------------------------
 
 @techreport{tno_gfast,
  	Address = {The Netherlands},
@@ -76,81 +81,133 @@ Title = {Optimized Transmitter-Based Signal Processing for Multicarrier Systems}
  	Date-Added = {2013-07-23 15:42:54 +0000},
  	Date-Modified = {2013-08-12 14:59:00 +0000},
  	Institution = {{TNO}}, 	Month = {apr.},
-Title = {Enabling 4{GBB} via the last copper drop of a hybrid {F}tt{H} deployment}, 	
-Type = {White paper on {DSL}},
- 	Year = {2011}} 
-
-%%----------------------------------------------------------------------------- 
-
-
-%%datasheet%%------------------------------------------------------------------ 
-
-@manual{ad:ug570, 
-organization = "Analog Devices", 
-title = "AD9361 Reference Manual", 
-number = "UG-570", 
-year = 2015, 
-note = "Rev. A" }
-
-@manual{ad:ad9361, 
-organization = "Analog Devices", 
-title = "RF Agile Transceiver", 
-number = "AD9361", 
-year = 2014, 
-note = "Rev. E" }
-
-@manual{ad:ad9361driver, 
-organization = "Analog Devices", 
-title = "AD9361 Device Driver Customization", 
-number = "", 
-year = 2015,
-month = 7, 
-note = "Rev. 20 jul" }
-
-
-@manual{xilinx:vivado, 
-organization = "Xilinx", 
-title = "Vivado Design Suite User Guide", 
-number = "UG892", 
-year = 2014, 
-month = 4, 
-note = "Rev. 2014.2" } 
-
-@manual{xilinx:vc707, 
-organization = "Xilinx", 
-title = "Getting Started with the Virtex-7 FPGA VC707 Evaluation Kit", 
-number = "UG848", 
-year = 2014, 
-month = 10, 
-note = "v. 1.4.1" } 
-
-@manual{xilinx:axidma, 
-organization = "Xilinx", 
-title = "LogiCORE IP AXI DMA", 
-number = "PG021", 
-year = 2012, 
-month = 7, 
-note = "v. 6.01.a" }
-
-@manual{xilinx:axieth, 
-organization = "Xilinx", 
-title = "AXI Ethernet Subsystem", 
-number = "PG138", 
-year = 2014, 
-month = 10, 
-note = "v. 6.2" }
+	Title = {Enabling 4{GBB} via the last copper drop of a hybrid {F}tt{H} deployment},
+	Type = {White paper on {DSL}},
+ 	Year = {2011}}
 
 %%-----------------------------------------------------------------------------
 
 
-%%misc%%----------------------------------------------------------------------- 
+%%datasheet%%------------------------------------------------------------------
+
+@Manual{ad:ad9361,
+  title =        {RF Agile Transceiver},
+  organization = {Analog Devices},
+  address =      {One Technology Way, P.O. Box 9106, Norwood, MA 02062-9106, U.S.A.},
+  year =         {2013-2014}
+}
+
+
+@Manual{ad:ad9361driver,
+  title =        {AD9361 Device Driver Customization},
+  organization = {Analog Devices},
+  address =      {One Technology Way, P.O. Box 9106, Norwood, MA 02062-9106, U.S.A.},
+  month =        jul,
+  year =         {2015}
+}
+
+
+@Manual{ad:ug570,
+  title =        {AD9361 Reference Manual},
+  organization = {Analog Devices},
+  address =      {One Technology Way • P.O. Box 9106 • Norwood, MA 02062-9106, U.S.A.},
+  edition =      {Rev. A},
+  year =         {2014-2015}
+}
+
+
+@Manual{xilinx:axidma,
+  title =        {LogiCORE IP AXI DMA},
+  organization = {Xilinx},
+  edition =      {v. 6.01.a},
+  month =        jul,
+  year =         {2012}
+}
+
+
+@Manual{xilinx:axieth,
+  title =        {AXI Ethernet Subsystem},
+  organization = {Xilinx},
+  edition =      {v. 6.2},
+  month =        oct,
+  year =         {2014}
+}
+
+
+@Manual{xilinx:axigpio,
+  title =        {LogiCORE IP AXI GPIO},
+  organization = {xilinx},
+  edition =      {v2.0},
+  month =        nov,
+  year =         {2015}
+}
+
+
+@Manual{xilinx:axiquadspi,
+  title =        {LogiCORE IP AXI Quad SPI},
+  organization = {Xilinx},
+  edition =      {v3.2},
+  month =        nov,
+  year =         {2015}
+}
+
+
+@Manual{xilinx:fifo,
+  title =        {LogiCORE IP FIFO Generator},
+  organization = {Xilinx},
+  edition =      {v 12.0},
+  month =        jun,
+  year =         {2015}
+}
+
+
+@Manual{xilinx:ml605,
+  title =        {ML605 Hardware User Guide},
+  organization = {Xilinx},
+  edition =      {v1.8},
+  month =        oct,
+  year =         {2012}
+}
+
+
+@Manual{xilinx:vc707,
+  title =        {VC707 Evaluation Board for the Virtex-7 FPGA - User Guide},
+  organization = {Xilinx},
+  edition =      {v1.6.1},
+  month =        sep,
+  year =         {2015}
+}
+
+
+@Manual{xilinx:vc709,
+  title =        {VC709 Evaluation Board for the Virtex-7 FPGA - User Guide},
+  organization = {Xilinx},
+  edition =      {v1.5},
+  month =        mar,
+  year =         {2016}
+}
+
+
+@Manual{xilinx:vivado,
+  title =        {Vivado Design Suite User Guide},
+  organization = {Xilinx},
+  edition =      {Rev. 2014.2},
+  month =        apr,
+  year =         {2014}
+}
+
+
+%%-----------------------------------------------------------------------------
+
+
+%%misc%%-----------------------------------------------------------------------
 
 @misc{CD4007,
- 	author={Texas Instruments}, 	
-title={CD4007UB}, 	
-howpublished = "site usar package url", 	
-note={original document from Harris Semiconductor}, 	
-publisher={Texas Instruments}, 	
-year={2012} } 
+ 	author={Texas Instruments},
+title={CD4007UB},
+howpublished = "site usar package url",
+note={original document from Harris Semiconductor},
+publisher={Texas Instruments},
+year={2012} }
 
 %%-----------------------------------------------------------------------------
