add new references for sdr

--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,12 @@
   year =    {2009}
 }
 
+@Article{neenu2014,
+  author =  {Neenu Joseph and Dr. P Nirmal Kumar},
+  title =   {FPGA based Realization of OFDM Transceiver system for Software Defined Radio},
+  journal = {2nd International Conference on Devices, Circuits and Systems (ICDCS)},
+  year =    {2014}
+}
 
 @Article{ladimer2009,
   author =  {Ladimer S. Nagurney},
@@ -209,5 +215,33 @@ howpublished = "site usar package url",
 note={original document from Harris Semiconductor},
 publisher={Texas Instruments},
 year={2012} }
+
+%%-----------------------------------------------------------------------------
+
+%%websites%%-------------------------------------------------------------------
+
+@online{web:sdrforum,
+  author = {Wireless Innovation Forum},
+  title = {Wireless Innovation Forum},
+  year = 2016,
+  url = {http://www.wirelessinnovation.org/},
+  urldate = {2016-03-20}
+}
+
+@online{web:usrp,
+  author = {Ettus Research},
+  title = {{Ettus Research} A National Instruments Company},
+  year = 2016,
+  url = {https://www.ettus.com/},
+  urldate = {2016-03-20}
+}
+
+@online{web:gnuradio,
+  author = {Gnuradio},
+  title = {{Gnuradio} The Free & Open-Source Software Radio Ecosystem},
+  year = 2016,
+  url = {http://gnuradio.org/},
+  urldate = {2016-03-20}
+}
 
 %%-----------------------------------------------------------------------------
