--- a/references.bib
+++ b/references.bib
@@ -238,7 +238,7 @@ year={2012} }
 
 @online{web:gnuradio,
   author = {Gnuradio},
-  title = {{Gnuradio} The Free & Open-Source Software Radio Ecosystem},
+  title = {{Gnuradio} The Free and Open-Source Software Radio Ecosystem},
   year = 2016,
   url = {http://gnuradio.org/},
   urldate = {2016-03-20}
